# blake-hash

./: Cargo.toml  README.md  index.d.ts  package.json
.github/workflows/: CI.yml  lint.yml
src/: lib.rs
