[package]
edition = "2021"
name = "napi-rs_blake2"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13"
blake2b_simd = "0.5"
blake2s_simd = "0.5"
blake3 = {version = "1"}
hex = "0.4"
napi = {path = "../napi-rs/crates/napi"}
napi-derive = {path = "../napi-rs/crates/macro"}
ryu = "1"

[target.'cfg(all(not(all(target_os = "linux", target_arch = "aarch64", target_env = "musl")), not(all(target_os = "windows", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
codegen-units = 1
lto = true
